simple role-based authorization (spring 6.4.2) - [matchers+configuration]